# vivify

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
examples/: README.md  complex.py  example.ini  example.py  simple.py  vivifiable.py
tests/: test_vivify.py
vivify/: __init__.py  vivify.py
