[tool.poetry]
authors = ["Adam David Walker <adam@wlkr.dev>"]
description = "A Python library for using INI files to instantiate classes."
documentation = "https://github.com/wlkr/vivify"
homepage = "https://github.com/wlkr/vivify"
include = ["LICENSE"]
license = "Apache-2.0"
maintainers = ["Adam David Walker <adam@wlkr.dev>"]
name = "vivify"
readme = "README.md"
repository = "https://github.com/wlkr/vivify"
version = "1.0.1"

[tool.poetry.dependencies]
python = "^3.9"
typing-inspect = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
flake8 = "^5.0.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
